--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -1,5 +1,4 @@
 @import "./scss/abstracts/variables.scss";
-@import "./modal.scss";
 
 // $mobile: 375px;
 // $tablet: 768px;
@@ -10,7 +9,6 @@
 * {
     margin: 0;
     padding: 0;
-    outline: 1px solid black;
 }
 
 @font-face {
@@ -63,6 +61,131 @@ button {
     text-align: center;
 }
 
+.modal {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 99998;
+    background-color: $color-translucent-black;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    overflow-y: auto;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity .4s, visibility .4s;
+}
+
+.modal__box {
+    position: relative;
+    max-width: 414px;
+    padding: 45px;
+    z-index: 3;
+    background-color: $color-light-gray;
+    border-radius: 0.45rem;
+    margin: 30px 15px;
+    transform: scale(0);
+    transition: transform .8s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    @media (max-width: 500px) {
+        max-width: 300px;
+        margin: 0;
+        padding: 10px;
+    }
+}
+
+.modal__close-btn {
+    position: absolute;
+    top: 3px;
+    right: 3px;
+    border: none;
+    background-color: transparent;
+    padding: 5px;
+    cursor: pointer;
+}
+
+.modal__close-btn svg path {
+    transition: fill .4s;
+    stroke-width: 1.5px;
+}
+
+.modal__close-btn:hover svg:hover path {
+    stroke: #8cac18;
+}
+
+.modal.open {
+    visibility: visible;
+    opacity: 1;
+}
+
+.modal.open .modal__box {
+    transform: scale(1); 
+}
+
+.modal__box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal__title {
+    color: $color-dark-gray;
+    font-size: clamp(25px, 3vw, 34px);
+    font-family: 'Roboto 300', sans-serif;
+    padding-bottom: 20px;
+}
+
+.modal__input {
+    width: 294px;
+    height: 53px;
+    background-color: $color-white;
+    color: $color-dark-gray;
+    border: none;
+    border-radius: 5px;
+    padding-left: 20px;
+    font-size: 20px;
+    font-family: 'Roboto 100', sans-serif;
+
+    @media (max-width: 500px) {
+        width: 250px;
+    }
+
+    &::placeholder {
+        color: $color-dark-gray;
+        caret-color: $color-dark-gray;
+        caret-shape: inherit;
+    }
+
+    &:focus {
+        outline: none;
+        border: none;
+        box-shadow: none;
+    }
+}
+
+.modal__button {
+    background-color: $color-lime;
+    width: 315px;
+    border-radius: 5px;
+    padding: 23px;
+    text-transform: uppercase;
+    font-size: 20px;
+
+    &:hover {
+        background-color: $color-light-lime;
+    }
+
+    @media (max-width: 500px) {
+        width: 250px;
+    }
+}
+
 .header .container {
     display: flex;
     align-items: flex-start;
@@ -99,29 +222,48 @@ button {
         font-size: clamp(14px, 2.5vw, 24px);
         margin-bottom: 5px;
     }
+}
 
-    & a {
+.callRequest__order {  
         cursor: pointer;
         color: $color-light-green;
         font-size: 14px;
-    }
+    
+        &:hover {
+            color: $color-green-hover;
+        }
+}
 
-    & a:hover {
-        color: $color-green-hover;
-    }
+.callRequest__phoneLink {
+    text-decoration: none;
+    color: $color-dark-gray;
+    cursor: auto;
 }
 
 .main-content .container {
     background-image: url(../images/main-image.jpg);
     background-size: cover;
-    max-height: 637px;
-    padding: 160px 0px 50px 0px;
+    background-repeat: no-repeat;
+    width: 100%;
+    background-position: center;
+    transition: background-position 0.5s;
+    padding: 200px 0px 50px 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
+
+    @media (max-width: 768px) {
+        background-position: right;
+        padding: 150px 0px 50px 0;
+    }
+
+    @media (max-width: 400px) {
+        padding: 170px 10px 50px 10px;
+    }
 }
+
 
 .main-content_title {
     font-family: 'Roboto 300', sans-serif;
@@ -154,8 +296,8 @@ button {
 }
 
 .workWithUs img {
-    max-width: 317px;
-    padding: 20px 20px 0 0;
+    max-width: 370px;
+    padding: 20px 10px 0 0;
     @media (max-width: 640px) {
         display: none;
     }
@@ -250,7 +392,7 @@ button {
     }
 }
 
-.trustUs__benefits_item {
+.trustUs__benefits-item {
     display: flex;
     flex-direction: column;
     padding: 0 5px 0 5px;
@@ -258,7 +400,7 @@ button {
     color: $color-dark-cyan;
 }
 
-.item__header {
+.trustUs__benefits-item-header {
     display: flex;
     margin-bottom: 10px;
     align-items: center;
@@ -280,7 +422,7 @@ button {
     font-size: 22px;
 }
 
-.item__footer {
+.trustUs__benefits-item-footer {
     line-height: 1.43;
     font-size: 18px;
 }
@@ -289,8 +431,6 @@ button {
     background-image: url(../images/underwater.jpg);
     background-size: cover;
     position: relative;
-
-
 }
 
 .request .container::before {
@@ -341,7 +481,12 @@ button {
 .modalForm {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 30px;
+    @media (max-width: 500px) {
+        flex-direction: column;
+        gap: 15px;
+    }
 }
 
 .form__body::after {
@@ -444,6 +589,7 @@ button {
     font-size: 55px;
     font-family: 'Roboto 100', sans-serif;
     font-weight: 100;
+    margin-bottom: 15px;
 }
 
 .weAre img {
@@ -452,7 +598,6 @@ button {
 }
 
 .weAre__content {
-    outline: 2px solid pink;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -542,24 +687,8 @@ button {
 }
 
 .footer {
-    background-image: url(../images/grey-background.jpg);
-    background-size: cover;
-    position: relative;
     background-color: $color-footer-bg;
     color: $color-white;
-    position: relative;
-    // z-index: 2;
-}
-
-.footer::before{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: $color-translucent-gray;
-    z-index: 1;
 }
 
 .footer .container {
@@ -568,7 +697,6 @@ button {
     justify-content: center;
     padding: 20px 5px;
     gap: 50px;
-    // z-index: 2;
 
     @media (max-width: 630px) {
         flex-direction: column;
@@ -578,7 +706,6 @@ button {
 
 .footer__logo {
     margin-right: 0;
-    z-index: 2;
 
     span {
         border-radius: 0;
@@ -586,7 +713,6 @@ button {
 }
 
 .footer__email {
-    z-index: 2;
     font-size: 18px;
 }
 
@@ -594,7 +720,7 @@ button {
     font-size: clamp(16px, 2vw, 20px);
     font-family: 'Roboto 100', sans-serif;
     font-weight: 100;
-    z-index: 2;
+
     @media (max-width: 940px) {
         text-align: center;
     }
