--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -193,17 +193,27 @@ button {
     padding: 25px;
     font-family: 'Roboto 300', sans-serif;
 
-    @media (max-width: 800px) {
+    @media screen and (max-width: 800px) {
         flex-direction: column;
         justify-content: center;
         align-items: center;
         gap: 10px;
+    }
+
+    @media (max-width: 400px) {
+        margin-bottom: -50px;
     }
 }
 
 .title {
     font-size: clamp(14px, 5vw, 18px);
     max-width: 350px;
+
+    @media (max-width: 400px) {
+        text-align: center;
+        gap: 15px;
+        outline: 1px solid $color-light-green;
+    }
 }
 
 .callRequest {
@@ -261,6 +271,7 @@ button {
 
     @media (max-width: 400px) {
         padding: 170px 10px 50px 10px;
+        background-position: -600px 50px;
     }
 }
 
@@ -289,6 +300,7 @@ button {
 .workWithUs .container {
     display: flex;
     justify-content: space-between;
+    background-color: #f7fbf2;
 
     @media (max-width: 640px) {
         justify-content: center;
@@ -427,13 +439,13 @@ button {
     font-size: 18px;
 }
 
-.request .container {
+.request {
     background-image: url(../images/underwater.jpg);
     background-size: cover;
     position: relative;
 }
 
-.request .container::before {
+.request::before {
     content: '';
     position: absolute;
     top: 0;
@@ -519,6 +531,10 @@ button {
     font-weight: 800;
     color: $color-error-red;
     padding-top: 5px;
+    @media (max-width: 355px) {
+        font-size: 12px;
+        padding-top: 10px;
+    }
 }
 
 .form__input_mainForm, .form__button_mainForm {
@@ -544,6 +560,10 @@ button {
     @media (max-width: 520px) {
         max-width: 290px;
     }
+    @media (max-width: 355px) {
+        max-width: 220px;
+        padding-left: 35px;
+    }
 }
 
 .form__input_mainForm::placeholder {
@@ -561,7 +581,7 @@ button {
 .form__button_mainForm {
     border: 2px solid $color-black;
     color: $color-white;
-    font-size: 20px;
+    font-size: clamp(14px, 2vw, 20px);
     text-transform: uppercase;
     max-width: 338px;
     height: 51px;
@@ -569,7 +589,12 @@ button {
     cursor: pointer;
 
     & span {
-        font-size: 25px;
+        font-size: clamp(14px, 2vw, 25px);
+
+    }
+
+    @media (max-width: 355px) {
+        max-width: 250px;
     }
 }
 
@@ -595,6 +620,11 @@ button {
 .weAre img {
     max-width: 352px;
     max-height: 352px;
+
+    @media (max-width: 355px) {
+        width: 300px;
+        height: 300px;
+    }
 }
 
 .weAre__content {
@@ -657,19 +687,19 @@ button {
 .questions h3 {
     text-align: center;
     color: $color-white;
-    line-height: 53px;
+    line-height: clamp(30px, 5vw, 53px);
     font-family: 'Roboto 100', sans-serif;
     font-weight: 100;
     z-index: 2;
 }
 
 .questions h2 {
-    font-size: 50px;
-    padding: 50px 0 20px 0;
+    font-size: clamp(30px, 3vw, 50px);
+    padding: clamp(20px, 5vw, 50px) 0 clamp(10px, 2.5vw, 20px) 0;
 }
 
 .questions h3 {
-    font-size: 30px;
+    font-size: clamp(18px, 3vw, 30px);
     padding-bottom: clamp(30px, 4vw, 50px);
 }
 
@@ -678,12 +708,16 @@ button {
     background-color: $color-orange;
     max-width: 420px;
     border-radius: 12px;
-    font-size: 28px;
+    font-size: clamp(20px, 3vw, 28px);
     font-family: 'Roboto 100', sans-serif;
     font-weight: 100;
-    line-height: 67px;
-    padding: 10px;
+    line-height: clamp(40px,3vw, 67px);
+    padding: clamp(5px, 3vw, 10px);
     margin-bottom: 30px;
+
+    @media (max-width: 355px) {
+        width: 80%;
+    }
 }
 
 .footer {
